# textli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml  test.yml
docs/: ai.md  contributing.md  embedding.md  index.md  install.md  keybindings.md  opening.md  reading.md  writing.md
examples/: charts.md  math.md  paper.md
tests/: conftest.py  test_app.py  test_charts.py  test_codeblocks.py  test_comment_author.py  test_comment_edit.py  test_comments.py  test_editor_comments.py  test_editor_follow_source.py  test_editor_math_annotate.py  test_editor_suggestions.py  test_editor_toggles.py  test_font_embedding.py  test_formulas.py  test_grafli.py  test_heading_style.py  test_inline_editor.py  test_links.py  test_links_nav.py  test_live_reload.py  test_math_render.py  test_open_dialog.py  test_openfile.py  test_paper.py  test_position_memory.py  test_positions.py  test_reading_style.py  test_search.py  test_search_dialog.py  test_skill_install.py  test_srcref.py  test_status.py  test_status_line.py  test_suggestions.py  test_tables.py  test_vim.py  test_write_outline.py
textli/: __init__.py  app.py  chartrender.py  charts.py  codeblocks.py  comments.py  constants.py  editor.py  fonts.py  formulas.py  graflirender.py  highlight.py  inline_editor.py  jump.py  links.py  mathrender.py  open_overlay.py  openfile.py  paper.py  positions.py  search.py  search_overlay.py  settings.py  skill_cli.py  skill_install.py  srcref.py  status.py  suggest.py  vim.py
textli/skills/textli/: SKILL.md
textli/skills/textli/references/: decision-doc.md  learning-doc.md  paper.md
